kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-site
  namespace: jst
  labels:
    app: static-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-site
  template:
    metadata:
      labels:
        app: static-site
    spec:
      containers:
      - name: static-site
        image: cslauritsen/justsotech-com:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 256Mi
            cpu: 500m
          requests:
            cpu: 1m
            memory: 64Mi
