kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-site
  namespace: hugo
  labels:
    app: static-site
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: static-site
