kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-site
  namespace: hugo
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # Tell traefik to use HTTP to talk to the backend
    ingress.kubernetes.io/protocol: http
spec:
  tls:
  - hosts:
    - blog2.chadl.tech
    secretName: blog2-prod-tls
  rules:
    - host: blog2.chadl.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-site
                port: 
                  name: http
